Implement order creation from active cart and handle order status updates