@@ -1,31 +1,32 @@
 package com.hagag.shopsphere_ecommerce.service.impl;
 
-import com.hagag.shopsphere_ecommerce.dto.order.OrderRequestDto;
 import com.hagag.shopsphere_ecommerce.dto.order.OrderResponseDto;
 import com.hagag.shopsphere_ecommerce.dto.pagination.PaginatedResponseDto;
 import com.hagag.shopsphere_ecommerce.entity.*;
+import com.hagag.shopsphere_ecommerce.enums.CartStatus;
 import com.hagag.shopsphere_ecommerce.enums.OrderStatus;
 import com.hagag.shopsphere_ecommerce.enums.UserRole;
+import com.hagag.shopsphere_ecommerce.exception.custom.BusinessException;
 import com.hagag.shopsphere_ecommerce.exception.custom.ResourceNotFoundException;
 import com.hagag.shopsphere_ecommerce.exception.custom.UnauthorizedActionException;
 import com.hagag.shopsphere_ecommerce.mapper.OrderMapper;
 import com.hagag.shopsphere_ecommerce.mapper.PaginationMapper;
-import com.hagag.shopsphere_ecommerce.repository.AddressRepo;
-import com.hagag.shopsphere_ecommerce.repository.OrderRepo;
-import com.hagag.shopsphere_ecommerce.repository.ProductRepo;
-import com.hagag.shopsphere_ecommerce.repository.UserRepo;
+import com.hagag.shopsphere_ecommerce.repository.*;
 import com.hagag.shopsphere_ecommerce.service.OrderService;
+import com.hagag.shopsphere_ecommerce.service.ShippingService;
 import com.hagag.shopsphere_ecommerce.util.SecurityUtil;
 import com.hagag.shopsphere_ecommerce.validation.AccessGuard;
+import com.hagag.shopsphere_ecommerce.validation.OrderTransitionValidator;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -34,56 +35,42 @@ public class OrderServiceImpl implements OrderService {
     private final OrderRepo orderRepo;
     private final OrderMapper orderMapper;
     private final SecurityUtil securityUtil;
-    private final AddressRepo addressRepo;
     private final OrderPricingServiceImpl orderPricingService;
-    private final ProductRepo productRepo;
     private final AccessGuard accessGuard;
     private final PaginationMapper paginationMapper;
     private final UserRepo userRepo;
+    private final OrderTransitionValidator orderTransitionValidator;
+    private final CartRepo cartRepo;
+    private final ShippingService shippingService;
 
     @Override
     @Transactional
-    public OrderResponseDto createOrder(OrderRequestDto orderRequestDto) {
+    public OrderResponseDto createOrder(Long shippingAddressId) {
         User currentUser = securityUtil.getCurrentUser();
 
         if (currentUser.getRole() != UserRole.CUSTOMER) {
             throw new UnauthorizedActionException("Only customers can create orders");
         }
 
-        Address shippingAddress;
-        if (orderRequestDto.getShippingAddressId() != null) {
-            shippingAddress = addressRepo.findById(orderRequestDto.getShippingAddressId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Address not found"));
+        Cart cart = cartRepo.findByUserAndStatus(currentUser , CartStatus.ACTIVE)
+                .orElseThrow(() -> new ResourceNotFoundException("No active cart found"));
 
-            if (!shippingAddress.getUser().getId().equals(currentUser.getId())) {
-                throw new UnauthorizedActionException("You are not allowed to use this address");
-            }
-        } else {
-            shippingAddress = currentUser.getAddresses()
-                    .stream()
-                    .filter(Address::isDefaultAddress)
-                    .findFirst()
-                    .orElseThrow(() -> new ResourceNotFoundException("No default address found for this user"));
-        }
+        Address shippingAddress = shippingService.resolveShippingAddress(shippingAddressId);
 
-        Order order = orderMapper.toEntity (orderRequestDto);
-        order.setUser (currentUser);
-        order.setOrderStatus(OrderStatus.PENDING);
-        order.setShippingAddress(shippingAddress);
+        Order order = Order.builder()
+                .user(currentUser)
+                .orderStatus(OrderStatus.PENDING)
+                .shippingAddress(shippingAddress)
+                .build();
 
-        List<OrderItem> items = orderRequestDto.getOrderItems()
+        List<OrderItem> items = cart.getCartItems()
                 .stream()
-                .map(orderItemRequestDto -> {
-                    Product product = productRepo.findById(orderItemRequestDto.getProductId())
-                            .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
-
-                    return OrderItem.builder()
-                            .product(product)
-                            .quantity(orderItemRequestDto.getQuantity())
+                .map(cartItem ->  OrderItem.builder()
+                            .product(cartItem.getProduct())
+                            .quantity(cartItem.getQuantity())
                             .order(order)
-                            .build();
-                })
-                .collect(Collectors.toList());
+                            .build()
+                ).toList();
 
         order.setOrderItems(items);
 
@@ -91,6 +78,10 @@ public class OrderServiceImpl implements OrderService {
         order.setTotalAmount(totalAmount);
 
         Order savedOrder = orderRepo.save (order);
+
+        cart.setStatus(CartStatus.ORDERED);
+        cartRepo.save(cart);
+
         return orderMapper.toDto (savedOrder);
     }
 
@@ -143,6 +134,11 @@ public class OrderServiceImpl implements OrderService {
                 .orElseThrow(() -> new ResourceNotFoundException("Order not found"));
 
         accessGuard.checkAdminOnly();
+
+        if (!orderTransitionValidator.canTransition(order.getOrderStatus(), status)) {
+
+            throw new BusinessException("Invalid transition from " + order.getOrderStatus() + " to " + status , HttpStatus.BAD_REQUEST);
+        }
 
         order.setOrderStatus(status);
         orderRepo.save(order);
